--- a/hello.html
+++ b/hello.html
@@ -5,7 +5,8 @@
 </head>
 <body>
      
-    <h1>Hello</h1>
+    <h1>Dua</h1>
+    <h2>Ya Allah make me super intelligent and brilliant woman</h2>
     <p>Ya Allah Subhana UataAllah help me guide me bless me and my family. Open to me and my husband new doors full of baraka. Amin</p>
 </body>
 </html>
